--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Alkemia Art AI - Générateur de posts pour figurines STL</title>
+    <title>Alkemia Art AI - Générateur de posts pour figurines STL v1.0.1</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <meta name="description" content="Générateur IA intelligent pour créer des posts marketing optimisés pour vos figurines STL sur Discord, Instagram et TikTok">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
